# basilisk

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  basilisk.nix  default.nix  flake.nix
.github/workflows/: build.yml  ctest.yml  default.yml
cmake/: basiliskConfig.cmake.in  basiliskOptions.cmake  basilisk_add_ctest.cmake  basilisk_add_executable.cmake  run_basilisk_dimensions_test.cmake  run_basilisk_executable_test.cmake  run_basilisk_test.cmake
debian/: control  pacific-basilisk.install  rules
rpm/: pacific-basilisk.spec
src/: AUTHORS  CMakeLists.txt  Makefile  Makefile.defs  a32.h  common.h  display.h  distance.h  include.c  include.h  include.lex  output.h  paths.c  paths.h  postproc.c  postproc.lex  ppm2gif  ppm2mp4  ppm2mpeg  ppm2ogv  qcc.c  run.h  terrain.h  timestep.h  utils.h  vertexbuffer.h  view.h
src/ast/: ast.h  check.c  kernels.c  macro.h  translate.c
src/ast/interpreter/: dimension.c  graph.c  interpreter.c  test12.ref  test16.ref  test18.ref
src/ast/interpreter/dimension-tests/: test13.ref  test14.ref  test20.ref  test21.ref  test22.ref  test7.ref  test8.ref
src/cvmix/: CMakeLists.txt  cvmix.h
src/darcsit/: gethal.sh  hal2bib.awk  literate-c.lex
src/darcsit/cgi-bin/: darcsit
src/examples/: turbulence.c
src/examples_forest/: compile-mpi-debug.sh  compile-mpi.sh  karman_cubic.c  karman_noncubic.c  sphere_noncubic.c
src/gl/: CMakeLists.txt  fb_tiny.c
src/grid/: CMakeLists.txt  balance.h  events.h  foreach_cell.h  gpu-cartesian.h  gpu-multigrid.h  multigrid.h  stencils.h  tree-common.h  tree-mpi.h  tree.h
src/grid/cuda/: Makefile  backend.h  cartesian.h  cuda.c  cuda.h  gpu.h  grid.h  multigrid.h  reduce.c  reduce.h  reduction.h
src/grid/gpu/: Benchmarks.md  Makefile  backend.h  cartesian.h  errors.c  errors.lex  gpu.h  grid.h  multigrid.h  opengl.c  output.h  reduction.c
src/grid/gpu/Benchmarks/: advection  advection.awk  bump2D-gpu  lid  reversed  turbulence
src/grid/hip/: Makefile  cartesian.h  hip.c  multigrid.h
src/grid/memindex/: virtual.h
src/kdt/: CMakeLists.txt
src/ppr/: CMakeLists.txt  ppr.h
src/test/: CMakeLists.txt  CMakeLists_old.txt  Makefile  advection.cuda.ref  advection.hip.ref  balance5.c  bump2D-gpu.c  bump2D-gpu.cuda.ref  bump2D-gpu.hip.ref  circle.c  dump-staggered.c  entrainment.c  fall.c  gpu-reduce.c  gpu-reduce.hip.ref  gpu.c  gpu.hip.ref  indexing.c  mpi-refine.c  ns-pressure-restore.c  ows_papa.c  wind-driven.c
src/test_forest/: README.md  TODO.md  compile-mpi-debug.sh  mpi-forest-coarsen.c  mpi-forest-dump-restore.c  mpi-forest-grid.c  mpi-forest-refine.c  mpi-forest-restriction.c  run-mpi.sh  run.sh  tree-mpi-old-noncubic-exceptions.md
src/test_forest/test/: mpi-refine1.c  mpi-restriction.c  refine_unbalanced.h
